--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "antd": "^3.20.7",
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
+    "concurrently": "^4.1.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "jsonp": "^0.2.1",
@@ -18,14 +19,14 @@
     "react-scripts": "3.0.1",
     "redux": "4.0.4",
     "redux-devtools-extension": "^2.13.8",
-    "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "dev": "concurrently \"node server.js\" \"yarn start\""
   },
   "eslintConfig": {
     "extends": "react-app"
