--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
   },
   "scripts": {
     "start": "node server.js",
-    "build": "yarn install && yarn build"
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
